--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,12 +7,15 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/superHeroDancer.js"></script>
+    <script src="src/batmanDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-      <<a href="#" class="addDancerButton" data-dancer-maker-function-name="superHeroDancer">add a superHeroDancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SuperHeroDancer">add a hero dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BatmanDancer">add a batman dancer</a>
+      <a href = "#" class="lineUpButton">lineup the dancers</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
